// Copyright 2025 The Celestinal Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package celestinal.v1;

import "buf/validate/validate.proto";

option go_package = "github.com/celestinals/celestinal/api/gen/go/celestinal/v1;celestinal";

message HeartbeatRequest {
  string address = 1 [(buf.validate.field).string.address = true];
}

message RegisterRequest {
  string name = 1 [(buf.validate.field).string.pattern = "^celestinal\\."];
  string address = 2 [(buf.validate.field).string.host_and_port = true];
  int64 ttl = 3 [(buf.validate.field).int64.gt = 0];
}

message DiscoverRequest {
  string name = 1 [(buf.validate.field).string.pattern = "^celestinal\\."];
}

message DiscoverResponse {
  string name = 1 [(buf.validate.field).string.pattern = "^celestinal\\."];
  string address = 2 [(buf.validate.field).string.address = true];
}